styles.css
body {
	font-size: 18px;
	margin-left: 10%;
	margin-right: 10%; 
	/*
	background-color: black; 
	*/
}

data {
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	font-size: 20px;
	/*
	margin: 70px;
	*/
}

div.a {
	text-indent: 40px;
}

.polaroid {
	width: 160px;
	text-align: center;
	border-radius: 10px;	
}

div.pic{
	border-radius: 10px;
}

aside {
	display: block;
	background-color: #85C1E9;
	float: right;
	text-align: center;
	width: 25%;
	border-radius: 10px;

}

.col-1-2 {
	width: 50%;
}

.col-2-3 {
	width: 50%;
	display: inline-block;
	vertical-align: top;
}

ul {
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	list-style-type: none;
	margin: 0px;
	padding: 0;
	overflow: hidden;
	background-color: #333;
	position: -webkit-sticky; /* for Safari */
	position: sticky;
	top: 0;
	border-radius: 8px;
}

/* this is causing style problems with my jqueryHomePage, accordian display #2....*/
li {
	float: left;
}

li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

li a:hover {
	background-color: #ccc;
}

header {
	border-radius: 10px;
}

.fa-github, .fa-linkedin-square, .fa-envelope{
	color: black;
	text-align: center;
	clear: both;
	line-height: 100%;
}

td {
  padding: 25px;
  font-size: 17px;
}

footer {
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	font-size: 13px;
	margin: 70px 0px 70px 0px;
	text-align: center;
	clear: both;
	line-height: 100%;
}

.active {
	background-color: #0099cc;
}

.activeRight {
	background-color: #0099cc;
	float: right
}

.money {
	background-color: #ff0000;
	float: right
}

.rightfloat {
	float: right
}

.center {
	width: 100%;
	height: 660px;
}

.center1 {
	width: 100%;
	height: 400px;
}

.center2 {
	display: flex;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	filter: drop-shadow(0 0 30px #333);
	overflow: hidden;
	clear: both;
	/* this fixes the overlay issue but disables any links.
	position: relative;
    z-index: -1;
	*/
}
.centerHomeHeader{
	display: flex;
    justify-content: center;
    align-items: center;
    height: 25rem;
    font-size: 6vw;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    background-color: #333;
    margin-bottom: 0.5rem;
	color:	#f2f2f2;
	
}.centerHomeHeader:before{
	color:  #0099cc;
	content: "print";
}
.aboutHeader{
	text-align: center;
    height: 25rem;
    font-size: 6vh;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    background-color: #ff0000;
    margin-bottom: 0.5rem;
	color:	#f2f2f2;
	border: solid #333;
	
}
.historyHeader{
	position:  relative;
	text-align: center;
    height: 25rem;
    font-size: 6vh;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    margin-bottom: 0.5rem;
	color:	#f2f2f2;
	
	
}
.historyHeaderText{
	position: absolute;     
	top: 0%;
	line-height: 133px;
	width: 100%;
	font-weight: bolder;
}
* {
	box-sizing: border-box;
}

.column {
	float: left;
	width: 33.33%;
	padding: 38px;
}

/* Clearfix (clear floats) */
.row::after {
	content: "";
	clear: both;
	display: table;
}

.accordion:after {
  content: '\02795'; /* Unicode character for "plus" sign (+) */
  font-size: 13px;
  color: #777;
  float: right;
  margin-left: 5px;
}

.active2:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}

.panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

/* Style the buttons that are used to open and close the accordion panel */
.accordion {
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), 
and when you move the mouse over it (hover) */
.active2, .accordion:hover {
  background-color: #ccc;
}

.topnav {
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
  color: black;
}

/* Add an active class to highlight the current page */
.topnav a.active {
  color: white;
}
.topnav a.activeRight {
  color: white;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
  display: none;
}

/* When the screen is less than 600 pixels wide, 
hide all links, except for the first one ("Home"). 
Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 1000px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav li:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with 
JavaScript when the user clicks the icon. 
display the links vertically instead of horizontally */
@media screen and (max-width: 1000px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  .topnav.responsive ul {
    float: none;
    display: block;
    text-align: left;
  }
  .topnav.responsive li {
    float: none;
    display: block;
    text-align: left;
  }
}

